@@ -7,6 +7,8 @@
 	 is false (which is the default)
 	-Fixed the JAR so starting it with "java -jar jWordSplitter-x.y.jar <filename>"
 	 works again
+	-Removed EnglishWordSplitter as its dictionary was not included anyway. Extend
+	 AbstractWordSplitter if you want to add support for languages other than German.
 
 2011-12-16 (3.3):
 	-renamed "jWordSplitter" in package path to "jwordsplitter" to be in accordance with 
